Remoção codigo boiler plate no Controlador de Rerserva